# mirudi

./: .gitignore  Cargo.toml  Makefile  README.md  release.sh
src/: config.rs  main.rs
src/commands/: error.rs  handler.rs  mod.rs
src/commands/ff/: handler.rs  mod.rs  mode.rs  range.rs  scope_input.rs  validated_config.rs
src/commands/init/: base.rs  mod.rs
src/commands/scope/: core.rs  handler.rs  mod.rs  prompt_input.rs
src/commands/web/: assets.rs  mod.rs  server.rs
src/config/: data.rs  error.rs  manager.rs  mod copy.rs  mod.rs
src/config/storage/: core.rs  filesystem.rs  mod.rs  serializer.rs  storage.rs
src/diff/: mod.rs
src/git/: core.rs  error.rs  mod.rs
src/utils/: env.rs
web/: .gitignore  README.md  index.html  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/.storybook/: main.ts  preview.ts
web/src/: App.tsx
web/src/__mocks__/: shiki.ts
web/src/components/ui/: index.ts
web/src/components/ui/BottomSheet/: BottomSheet.stories.tsx  BottomSheet.tsx
web/src/components/ui/DiffViewer/: DiffViewer.stories.tsx  DiffViewer.tsx  (+5 more)
web/src/containers/: DiffViewerContainer.tsx  ExtractedDiffViewerContainer.tsx  index.ts
web/src/contexts/: index.ts
web/src/contexts/SelectedDiffValueContext/: SelectedDiffValueContext.ts  SelectedDiffValueContext.tsx  SelectedDiffValueProvider.tsx  index.ts
web/src/hooks/: index.ts  useDiffData.ts  useFilesData.ts
web/src/lib/: fetcher.ts
web/src/pages/: MainPage.tsx
web/src/types/: index.ts
web/src/utils/: convertDiffViewData.ts  extractExtension.ts  index.ts
(+35 files in other folders)
