[package]
name = "mirudi"
version = "1.0.0-alpha.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
dirs = "6.0.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
git2 = "0.20.1"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
prettydiff = "0.8.0"

[dev-dependencies]
mockall = "0.13.1"
