[package]
name = "mirudi"
version = "1.0.1-alpha.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
dirs = "6.0.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
git2 = "0.20.1"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
prettydiff = "0.8.0"
rust-embed = "8.7.0"
mime_guess = "2.0.5"
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
webbrowser = "1.0.4"
indexmap = { version = "2.9.0", features = ["serde"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"

[dev-dependencies]
mockall = "0.13.1"
